# jsonrpc

./: .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CODEOWNERS  Cargo.toml  LICENSE  README.md  aliases.js  appveyor.yml  clippy.sh  index.html  lib.rs  rustfmt.toml  search-index.js  settings.html  source-files.js
_automate/: bump_version.sh  publish.sh
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml  README.md  build.rs
core-client/: Cargo.toml
core-client/src/: lib.rs  logger.rs
core-client/src/transports/: duplex.rs  http.rs  local.rs  mod.rs  ws.rs
core-client/transports/: Cargo.toml
core-client/transports/src/: lib.rs
core-client/transports/src/transports/: duplex.rs  http.rs  ipc.rs  local.rs  mod.rs  uds.rs  wasmhttp.rs  ws.rs
core/examples/: async.rs  basic.rs  meta.rs  middlewares.rs  params.rs
core/src/: calls.rs  commander.rs  delegates.rs  error.rs  handlers.rs  io.rs  lib.rs  middleware.rs  reactor.rs  request_handler.rs  response.rs
core/src/types/: error.rs  id.rs  mod.rs  mod.rs.in  params.rs  partial_params.rs  request.rs  response.rs  version.rs
derive/: Cargo.toml
derive/examples/: client-local.rs  generic-trait-bounds.rs  generic-trait.rs  meta-macros.rs  pubsub-macros.rs  std.rs
derive/src/: error.rs  lib.rs  options.rs  params_style.rs  rpc_attr.rs  rpc_trait.rs  to_client.rs  to_delegate.rs  to_delegate_fn.rs
derive/tests/: client.rs  compiletests.rs  lib.rs  macros.rs  pubsub-macros.rs  trailing.rs  trybuild.rs
derive/tests/run-pass/: client_only.rs  client_with_generic_trait_bounds.rs  lifetimes.rs  pubsub-dependency-not-required-for-vanilla-rpc.rs  pubsub-subscription-generic-type-with-deserialize.rs  pubsub-subscription-type-with-deserialize.rs  pubsub-subscription-type-without-deserialize.rs  server_only.rs
derive/tests/ui/: attr-invalid-meta-list-names.rs  attr-invalid-meta-list-names.stderr  attr-invalid-meta-words.rs  attr-invalid-meta-words.stderr  attr-invalid-name-values.rs  attr-invalid-name-values.stderr  attr-missing-name.stderr  attr-missing-rpc-name.rs  attr-missing-rpc-name.stderr  attr-named-params-on-server.rs  attr-named-params-on-server.stderr  multiple-rpc-attributes.rs  multiple-rpc-attributes.stderr  too-many-params.rs  too-many-params.stderr  trait-attr-named-params-on-server.rs  trait-attr-named-params-on-server.stderr
derive/tests/ui/pubsub/: attr-both-subscribe-and-unsubscribe.rs  attr-both-subscribe-and-unsubscribe.stderr  attr-invalid-meta-list-names.rs  attr-invalid-meta-list-names.stderr  attr-invalid-meta-words.rs  attr-invalid-meta-words.stderr  attr-invalid-name-values.rs  attr-invalid-name-values.stderr  attr-missing-subscription-name.rs  attr-missing-subscription-name.stderr  attr-neither-subscribe-or-unsubscribe.rs  attr-neither-subscribe-or-unsubscribe.stderr  missing-both.rs  missing-both.stderr  missing-subscribe.rs  missing-subscribe.stderr  missing-unsubscribe.rs  missing-unsubscribe.stderr  mixed-subscriber-signatures.rs  mixed-subscriber-signatures.stderr
examples/: async.rs  pub_sub.rs  server.rs  sync.rs
http/: Cargo.toml  README.md
http-server/: .editorconfig  README.md
http/examples/: http_async.rs  http_meta.rs  http_middleware.rs  server.rs
http/src/: cors.rs  error.rs  handler.rs  hosts_validator.rs  lib.rs  req.rs  request_response.rs  res.rs  response.rs  response_middleware.rs  tests.rs  utils.rs
ipc/: Cargo.toml  README.md
ipc-server/: Cargo.toml
ipc/examples/: ipc.rs
ipc/src/: lib.rs  logger.rs  meta.rs  nix.rs  select_both.rs  select_with_weak.rs  server.rs  shared.rs  stream_codec.rs  tests.rs  uds.rs  validator.rs  win.rs
ipc/tests/: multithreaded_test.rs
jsonrpc_client_transports/: all.html  enum.RpcError.html  index.html  struct.RawClient.html  struct.RpcChannel.html  struct.RpcFuture.html  struct.SubscriptionStream.html  struct.TypedClient.html  struct.TypedSubscriptionStream.html
jsonrpc_core/: all.html  enum.Compatibility.html  enum.RemoteProcedure.html  index.html  sidebar-items.js  struct.IoHandler.html  struct.MetaIoHandler.html  trait.IoHandlerExtension.html  trait.Metadata.html  trait.RpcMethod.html  trait.RpcMethodSimple.html  trait.RpcNotification.html  trait.RpcNotificationSimple.html  type.BoxFuture.html  type.FutureOutput.html  type.FutureResponse.html  type.FutureResult.html  type.FutureRpcResult.html  type.Result.html
jsonrpc_core_client/: all.html  enum.RpcError.html  index.html  sidebar-items.js  struct.RawClient.html  struct.RpcChannel.html  struct.RpcFuture.html  struct.SubscriptionStream.html  struct.TypedClient.html  struct.TypedSubscriptionStream.html
jsonrpc_derive/: all.html  attr.rpc.html  index.html
macros/: Cargo.toml
macros/examples/: generic-trait-bounds.rs  generic-trait.rs  generic-trait2.rs  meta-macros.rs  meta-macros2.rs  meta.rs  pubsub-macros.rs  std.rs
macros/src/: auto_args.rs  delegates.rs  lib.rs  pubsub.rs  util.rs
macros/tests/: macros.rs  pubsub-macros.rs
minihttp/: Cargo.toml  README.md
minihttp/examples/: http_async.rs  http_meta.rs  server.rs
minihttp/src/: cors.rs  hosts.rs  lib.rs  req.rs  res.rs  tests.rs
pubsub/: Cargo.toml
pubsub/examples/: pubsub.rs  pubsub_ipc.rs  pubsub_simple.rs  pubsub_ws.rs
pubsub/more-examples/: Cargo.toml
pubsub/more-examples/examples/: pubsub_ipc.rs  pubsub_ws.rs
pubsub/src/: delegates.rs  handler.rs  lib.rs  manager.rs  oneshot.rs  subscription.rs  typed.rs  types.rs
server-utils/: Cargo.toml
server-utils/src/: cors.rs  hosts.rs  lib.rs  matcher.rs  reactor.rs  session.rs  stream_codec.rs  suspendable_stream.rs
stdio/: Cargo.toml  README.md
stdio/examples/: stdio.rs
stdio/src/: lib.rs
tcp/: Cargo.toml  README.md
tcp/examples/: tcp.rs
tcp/src/: dispatch.rs  lib.rs  line_codec.rs  line_protocol.rs  logger.rs  meta.rs  server.rs  service.rs  tests.rs  validator.rs
test/: Cargo.toml
test/src/: lib.rs
ws/: Cargo.toml  README.md
ws/client/: Cargo.toml
ws/client/src/: lib.rs
ws/examples/: ws.rs
ws/src/: error.rs  lib.rs  metadata.rs  server.rs  server_builder.rs  session.rs  tests.rs
(+410 files in other folders)
