[package]
version = "1.1.0"
description = "JSON-RPC 2.0 implementation"
name = "jsonrpc"

[lib]
path = "lib.rs"

[workspace]

[dependencies]
jsonrpc-core = { path = "core" }
jsonrpc-http-server = { path = "http" }
jsonrpc-minihttp-server = { path = "minihttp" }
jsonrpc-ipc-server = { path = "ipc" }
jsonrpc-tcp-server = { path = "tcp" }
jsonrpc-macros = { path = "macros" }
jsonrpc-pubsub = { path = "pubsub" }
jsonrpc-server-utils = { path = "server-utils" }

