[package]
version = "7.0.2"
description = "JSON-RPC 2.0 implementation"
name = "jsonrpc"

[lib]
path = "lib.rs"

[workspace]

[dependencies]
jsonrpc-core = { path = "core" }
jsonrpc-http-server = { path = "http" }
jsonrpc-minihttp-server = { path = "minihttp" }
jsonrpc-ipc-server = { path = "ipc" }
jsonrpc-tcp-server = { path = "tcp" }
jsonrpc-ws-server = { path = "ws" }
jsonrpc-macros = { path = "macros" }
jsonrpc-pubsub = { path = "pubsub" }
jsonrpc-server-utils = { path = "server-utils" }
