[workspace]
members = [
	"core",
	"core-client",
	"core-client/transports",
	"http",
	"ipc",
	"derive",
	"pubsub",
	"pubsub/more-examples",
	"server-utils",
	"stdio",
	"tcp",
	"test",
	"ws",
]

[patch.crates-io]
parity-tokio-ipc = { git = "https://github.com/Xanewok/parity-tokio-ipc", branch = "endpoint-incoming-static" }
