[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Transport agnostic JSON-RPC 2.0 client implementation."
documentation = "https://docs.rs/jsonrpc-client/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-client"
repository = "https://github.com/paritytech/jsonrpc"
version = "11.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
failure = "0.1"
futures = "~0.1.6"
jsonrpc-core = { version = "11.0", path = "../core" }
log = "0.4"
serde_json = "1.0"

[dev-dependencies]
jsonrpc-derive = { version = "11.0", path = "../derive" }
jsonrpc-client = { version = "11.0", path = "." }
serde = "1.0"
tokio = "0.1"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
