[package]
name = "jsonrpc-core-client"
version = "18.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Transport agnostic JSON-RPC 2.0 client implementation."
documentation = "https://docs.rs/jsonrpc-core-client/"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
repository = "https://github.com/paritytech/jsonrpc"
edition = "2021"
rust-version = "1.56.1"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[features]
tls = ["jsonrpc-client-transports/tls"]
http = ["jsonrpc-client-transports/http"]
ws = ["jsonrpc-client-transports/ws"]
ipc = ["jsonrpc-client-transports/ipc"]
arbitrary_precision = ["jsonrpc-client-transports/arbitrary_precision"]

[dependencies]
jsonrpc-client-transports = { version = "18.0.0", path = "./transports", default-features = false }
futures = { version = "0.3", features = [ "compat" ] }

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
