[package]
description = "Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
homepage = "https://github.com/paritytech/jsonrpc"
repository = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-core"
version = "8.0.2"
authors = ["debris <marek.kotewicz@gmail.com>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
documentation = "https://paritytech.github.io/jsonrpc/jsonrpc_core/index.html"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
log = "0.4"
futures = "0.1.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
