[package]
authors = ["Parity Technologies <admin@parity.io>"]
documentation = "https://docs.rs/jsonrpc-derive/"
description = "High level, typed wrapper for `jsonrpc-core`"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-derive"
repository = "https://github.com/paritytech/jsonrpc"
version = "14.0.1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "fold"] }
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-crate = "0.1.4"

[dev-dependencies]
jsonrpc-core = { version = "14.0", path = "../core" }
jsonrpc-core-client = { version = "14.0", path = "../core-client" }
jsonrpc-pubsub = { version = "14.0", path = "../pubsub" }
jsonrpc-tcp-server = { version = "14.0", path = "../tcp" }
futures = "~0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
trybuild = "1.0"
