[package]
name = "jsonrpc-derive"
version = "18.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
documentation = "https://docs.rs/jsonrpc-derive/"
description = "High level, typed wrapper for `jsonrpc-core`"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpc"
edition = "2021"
rust-version = "1.56.1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "fold"] }
proc-macro2 = "1.0"
quote = "1.0.6"
proc-macro-crate = "0.1.4"

[dev-dependencies]
assert_matches = "1.3"
jsonrpc-core = { version = "18.0.0", path = "../core" }
jsonrpc-core-client = { version = "18.0.0", path = "../core-client" }
jsonrpc-pubsub = { version = "18.0.0", path = "../pubsub" }
jsonrpc-tcp-server = { version = "18.0.0", path = "../tcp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
