[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Rust http server using JSONRPC 2.0."
documentation = "https://docs.rs/jsonrpc-http-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "server"]
license = "MIT"
name = "jsonrpc-http-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "17.0.0"

[dependencies]
futures = "0.3"
hyper = "0.13"
jsonrpc-core = { version = "17.0", path = "../core" }
jsonrpc-server-utils = { version = "17.0", path = "../server-utils" }
log = "0.4"
net2 = "0.2"
parking_lot = "0.11.0"
unicase = "2.0"

[dev-dependencies]
env_logger = "0.7"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
