[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Rust http server using JSONRPC 2.0."
documentation = "https://docs.rs/jsonrpc-http-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "server"]
license = "MIT"
name = "jsonrpc-http-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "18.0.0"

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["http1", "tcp", "server",  "stream"] }
jsonrpc-core = { version = "18.0.0", path = "../core" }
jsonrpc-server-utils = { version = "18.0.0", path = "../server-utils" }
log = "0.4"
net2 = "0.2"
parking_lot = "0.11.0"
unicase = "2.0"

[dev-dependencies]
env_logger = "0.7"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
