[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "IPC server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ipc-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-ipc-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "14.0.1"

[dependencies]
log = "0.4"
tokio-service = "0.1"
jsonrpc-core = { version = "14.0", path = "../core" }
jsonrpc-server-utils = { version = "14.0", path = "../server-utils" }
parity-tokio-ipc = "0.2"
parking_lot = "0.9"

[dev-dependencies]
env_logger = "0.6"
lazy_static = "1.0"

[target.'cfg(not(windows))'.dev-dependencies]
tokio-uds = "0.2"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
