[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "IPC server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ipc-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-ipc-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "16.0.0"

[dependencies]
futures01 = { version = "0.1", package = "futures" }
futures03 = { version = "0.3", package = "futures", features = [ "compat" ] }
log = "0.4"
tower-service = "0.3"
jsonrpc-core = { version = "16.0", path = "../core" }
jsonrpc-server-utils = { version = "16.0", path = "../server-utils" }
parity-tokio-ipc = "0.7"
parking_lot = "0.11.0"

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.0"

[target.'cfg(not(windows))'.dev-dependencies]
tokio-uds = "0.2"
tokio02 = { package = "tokio", version = "0.2", default-features = false, features = ["uds"] }

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
