[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "IPC server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ipc-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-ipc-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "18.0.0"

[dependencies]
futures = "0.3"
log = "0.4"
tower-service = "0.3"
jsonrpc-core = { version = "18.0.0", path = "../core" }
jsonrpc-server-utils = { version = "18.0.0", path = "../server-utils", default-features = false }
parity-tokio-ipc = "0.9"
parking_lot = "0.11.0"

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.0"

[target.'cfg(not(windows))'.dev-dependencies]
tokio = { version = "1", default-features = false, features = ["net", "time", "rt-multi-thread"] }

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
