[package]
description = "Helper macros for jsonrpc-core"
homepage = "https://github.com/paritytech/jsonrpc"
repository = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-macros"
version = "8.0.1"
authors = ["rphmeier <robert@parity.io>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
documentation = "https://paritytech.github.io/jsonrpc/jsonrpc_macros/index.html"

[dependencies]
serde = "1.0"
jsonrpc-core = { version = "8.0", path = "../core" }
jsonrpc-pubsub = { version = "8.0", path = "../pubsub" }

[dev-dependencies]
serde_json = "1.0"
jsonrpc-tcp-server = { version = "8.0", path = "../tcp" }

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
