[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Helper macros for jsonrpc-core"
documentation = "https://docs.rs/jsonrpc-macros/"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
license = "MIT"
name = "jsonrpc-macros"
repository = "https://github.com/paritytech/jsonrpc"
version = "10.0.0"

[dependencies]
serde = "1.0"
jsonrpc-core = { version = "10.0", path = "../core" }
jsonrpc-pubsub = { version = "10.0", path = "../pubsub" }

[dev-dependencies]
serde_json = "1.0"
jsonrpc-tcp-server = { version = "10.0", path = "../tcp" }

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
