[package]
description = "Blazing fast http server for JSON-RPC 2.0."
homepage = "https://github.com/ethcore/jsonrpc"
repository = "https://github.com/ethcore/jsonrpc"
license = "MIT"
name = "jsonrpc-minihttp-server"
version = "7.0.0"
authors = ["tomusdrw <tomasz@parity.io>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "server"]
documentation = "https://ethcore.github.io/jsonrpc/jsonrpc_minihttp_server/index.html"

[dependencies]
log = "0.3"
futures = "0.1"
jsonrpc-core = { version = "7.0", path = "../core" }
jsonrpc-server-utils = { version = "7.0", path = "../server-utils" }
parking_lot = "0.3"
tokio-service = "0.1"
tokio-proto = { git = "https://github.com/tomusdrw/tokio-proto" }
tokio-minihttp = { git = "https://github.com/tomusdrw/tokio-minihttp" }
unicase = "1.3"

[dev-dependencies]
env_logger = "0.4"
reqwest = "0.4"
