[package]
description = "Blazing fast http server for JSON-RPC 2.0."
homepage = "https://github.com/paritytech/jsonrpc"
repository = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-minihttp-server"
version = "7.0.0"
authors = ["tomusdrw <tomasz@parity.io>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "server"]
documentation = "https://paritytech.github.io/jsonrpc/jsonrpc_minihttp_server/index.html"

[dependencies]
log = "0.3"
parking_lot = "0.4"
tokio-service = "0.1"
jsonrpc-core = { version = "7.0", path = "../core" }
jsonrpc-server-utils = { version = "7.0", path = "../server-utils" }
tokio-proto = { git = "https://github.com/tomusdrw/tokio-proto" }
tokio-minihttp = { git = "https://github.com/tomusdrw/tokio-minihttp" }

[dev-dependencies]
env_logger = "0.4"
reqwest = "0.6"
