[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Publish-Subscribe extension for jsonrpc."
documentation = "https://docs.rs/jsonrpc-pubsub/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
license = "MIT"
name = "jsonrpc-pubsub"
repository = "https://github.com/paritytech/jsonrpc"
version = "18.0.0"

[dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
jsonrpc-core = { version = "18.0.0", path = "../core" }
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11.0"
rand = "0.7"
serde = "1.0"

[dev-dependencies]
jsonrpc-tcp-server = { version = "18.0.0", path = "../tcp" }
serde_json = "1.0"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
