[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Server utils for jsonrpc-core crate."
documentation = "https://docs.rs/jsonrpc-server-utils/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-server-utils"
repository = "https://github.com/paritytech/jsonrpc"
version = "17.0.0"

[dependencies]
bytes = "0.5"
futures = "0.3"
globset = "0.4"
jsonrpc-core = { version = "17.0", path = "../core" }
lazy_static = "1.1.0"
log = "0.4"
tokio = { version = "0.2", features = ["rt-threaded", "io-driver", "io-util", "time", "tcp"] }
tokio-util = { version = "0.3", features = ["codec"] }

unicase = "2.0"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
