[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Server utils for jsonrpc-core crate."
documentation = "https://docs.rs/jsonrpc-server-utils/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-server-utils"
repository = "https://github.com/paritytech/jsonrpc"
version = "18.0.0"

[dependencies]
bytes = "1.0"
futures = "0.3"
globset = "0.4"
jsonrpc-core = { version = "18.0.0", path = "../core" }
lazy_static = "1.1.0"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "time", "net"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }

unicase = "2.0"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
