[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "STDIN/STDOUT server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-stdio-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-stdio-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "17.0.0"

[dependencies]
futures = "0.3"
jsonrpc-core = { version = "17.0", path = "../core" }
log = "0.4"
tokio = { version = "0.2", features = ["io-std", "io-driver", "io-util"] }
tokio-util = { version = "0.3", features = ["codec"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }
lazy_static = "1.0"
env_logger = "0.7"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
