[package]
name = "jsonrpc-stdio-server"
version = "18.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "STDIN/STDOUT server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-stdio-server/"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpc"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
futures = "0.3"
jsonrpc-core = { version = "18.0.0", path = "../core" }
log = "0.4"
tokio = { version = "1", features = ["io-std", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
lazy_static = "1.0"
env_logger = "0.7"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
