[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "TCP/IP server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-tcp-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-tcp-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "15.1.0"

[dependencies]
log = "0.4"
parking_lot = "0.10.0"
tokio-service = "0.1"
jsonrpc-core = { version = "15.1.0", path = "../core" }
jsonrpc-server-utils = { version = "15.1.0", path = "../server-utils" }

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.7"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
