[package]
name = "jsonrpc-tcp-server"
version = "18.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "TCP/IP server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-tcp-server/"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpc"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
jsonrpc-core = { version = "18.0.0", path = "../core" }
jsonrpc-server-utils = { version = "18.0.0", path = "../server-utils" }
log = "0.4"
parking_lot = "0.11.0"
tower-service = "0.3"

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.7"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
