[package]
name = "jsonrpc-test"
description = "Simple test framework for JSON-RPC."
version = "14.0.1"
authors = ["Tomasz Drwięga <tomasz@parity.io>"]
license = "MIT"
homepage = "https://github.com/paritytech/jsonrpc"
repository = "https://github.com/paritytech/jsonrpc"
documentation = "https://docs.rs/jsonrpc-test/"
edition = "2018"

[dependencies]
jsonrpc-core = { version = "14.0", path = "../core" }
jsonrpc-core-client = { version = "14.0", path = "../core-client" }
jsonrpc-pubsub = { version = "14.0", path = "../pubsub" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
jsonrpc-derive = { version = "14.0", path = "../derive" }

