[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "WebSockets server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ws-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-ws-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "16.0.0"

[dependencies]
futures01 = { version = "0.1", package = "futures" }
futures03 = { version = "0.3", package = "futures", features = [ "compat" ] }
jsonrpc-core = { version = "16.0", path = "../core" }
jsonrpc-server-utils = { version = "16.0", path = "../server-utils" }
log = "0.4"
parking_lot = "0.11.1"
slab = "0.4"
parity-ws = "0.10"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
