[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "WebSockets server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ws-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-ws-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "18.0.0"

[dependencies]
futures = "0.3"
jsonrpc-core = { version = "18.0.0", path = "../core" }
jsonrpc-server-utils = { version = "18.0.0", path = "../server-utils" }
log = "0.4"
parking_lot = "0.11.0"
slab = "0.4"
parity-ws = "0.10"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
