[package]
name = "jsonrpc-ws-server"
version = "18.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "WebSockets server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ws-server/"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpc"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
futures = "0.3"
jsonrpc-core = { version = "18.0.0", path = "../core" }
jsonrpc-server-utils = { version = "18.0.0", path = "../server-utils" }
log = "0.4"
parking_lot = "0.11.0"
slab = "0.4"
parity-ws = "0.11.1"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
