[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Transport agnostic JSON-RPC 2.0 client implementation."
documentation = "https://docs.rs/jsonrpc-client-transports/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-client-transports"
repository = "https://github.com/paritytech/jsonrpc"
version = "16.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[features]
default = ["http", "tls", "ws"]
tls = ["hyper-tls", "http"]
http = ["hyper", "futures01"]
ws = [
	"websocket",
	"tokio02",
	"futures01",
]
ipc = [
	"parity-tokio-ipc",
	"jsonrpc-server-utils/tokio02",
]
arbitrary_precision = ["serde_json/arbitrary_precision", "jsonrpc-core/arbitrary_precision"]

[dependencies]
derive_more = "0.99"
futures = { version = "0.3", features = [ "compat" ] }
jsonrpc-core = { version = "16.0", path = "../../core" }
jsonrpc-pubsub = { version = "16.0", path = "../../pubsub" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.7"

futures01 = { version = "0.1.26", package = "futures", optional = true }
hyper = { version = "0.12", optional = true }
hyper-tls = { version = "0.3.2", optional = true }
jsonrpc-server-utils = { version = "16.0", path = "../../server-utils", optional = true, default-features = false }
parity-tokio-ipc = { version = "0.7", optional = true }
tokio = { version = "0.1", optional = true }
websocket = { version = "0.24", optional = true }
tokio02 = { package = "tokio", version = "0.2", features = ["macros"], optional = true }

[dev-dependencies]
assert_matches = "1.1"
# FIXME: Uncomment once http migrates to Tokio 0.2
# jsonrpc-http-server = { version = "16.0", path = "../../http" }
jsonrpc-ipc-server = { version = "16.0", path = "../../ipc" }
lazy_static = "1.0"
env_logger = "0.7"
tokio02 = { package = "tokio", version = "0.2", features = ["macros"] }

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
