[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Transport agnostic JSON-RPC 2.0 client implementation."
documentation = "https://docs.rs/jsonrpc-client-transports/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-client-transports"
repository = "https://github.com/paritytech/jsonrpc"
version = "17.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[features]
default = ["http", "tls", "ws"]
tls = ["hyper-tls", "http"]
http = ["hyper", "tokio/full"]
ws = [
	"websocket",
	"tokio",
	"futures/compat"
]
ipc = [
	"parity-tokio-ipc",
	"jsonrpc-server-utils",
	"tokio",
]
arbitrary_precision = ["serde_json/arbitrary_precision", "jsonrpc-core/arbitrary_precision"]

[dependencies]
derive_more = "0.99"
futures = "0.3"
jsonrpc-core = { version = "17.0", path = "../../core" }
jsonrpc-pubsub = { version = "17.0", path = "../../pubsub" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.7"

hyper = { version = "0.13", optional = true }
hyper-tls = { version = "0.4", optional = true }
jsonrpc-server-utils = { version = "17.0", path = "../../server-utils", optional = true }
parity-tokio-ipc = { version = "0.8", optional = true }
tokio = { version = "0.2", optional = true }
websocket = { version = "0.24", optional = true }

[dev-dependencies]
assert_matches = "1.1"
jsonrpc-http-server = { version = "17.0", path = "../../http" }
jsonrpc-ipc-server = { version = "17.0", path = "../../ipc" }
lazy_static = "1.0"
env_logger = "0.7"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
